# gemini_api

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  config_variables_template.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg
docs/: explanation.md  index.md  reference.md  usage_guide.md
explanation/: index.html
gemini_api/: authentication.py  utils.py
gemini_api/endpoints/: fee_volume.py  fund_management.py  fx_rate.py  order.py  public.py
gemini_api_wrapper/: authentication.py
reference/: index.html
usage_guide/: index.html
