[tool.poetry]
name = "gemini_api"
version = "0.1.0"
description = "A Python wrapper for the Gemini cryptocurrency exchange API"
authors = ["Elias Benaddou Idrissi"]
license = "MIT"
repository = "https://github.com/eliasbenaddou/gemini_api"
readme = "README.md"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
pipreqs = "^0.4.11"
requests = "^2.28.0"
pre-commit = "^2.19.0"
black = "^22.3.0"
mkdocs = "^1.3.0"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "^8.3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
